Day-1 basic of HTML

--- a/Day-1/Travel/index.html
+++ b/Day-1/Travel/index.html
@@ -91,6 +91,35 @@
     <!-- footer -->
     <footer class="footer-wrapper container div-center">
         <address class="copyright-wrapper">
+            <div class="footer-list">
+                <ul>
+                    <li><a href="">flight</a></li>
+                    <li><a href="">bus</a></li>
+                    <li><a href="">flight status</a></li>
+                    <li><a href="">check <span class="text-capital">PNR</span> status</a></li>
+                    <li><a href="">corporate travel</a></li>
+                </ul>
+                <ul>
+                    <li><a href="">hotels</a></li>
+                    <li><a href="">cabs</a></li>
+                    <li><a href="">airlines</a></li>
+                    <li><a href=""><span class="text-capital">EMT PRO</span></a></li>
+                    <li><a href="">blog</a></li>
+                </ul>
+                <ul>
+                    <li><a href="">trains</a></li>
+                    <li><a href="">cruise</a></li>
+                    <li><a href="">airport</a></li>
+                    <li><a href="">activities</a></li>
+                    <li><a href="">flight check-in</a></li>
+                </ul>
+                <ul>
+                    <li><a href="">holidays</a></li>
+                    <li><a href="">carters</a></li>
+                    <li><a href="">travel guides</a></li>
+                    <li><a href="">travel updates</a></li>
+                </ul>
+            </div>
             <p>&copy; Copyright Reserved. Travel Go. </p>
         </address>
     </footer>
