--- a/Day-1/Header/index.html
+++ b/Day-1/Header/index.html
@@ -12,28 +12,37 @@
 
 <body>
     <!-- Header -->
-    <header class="header-container">
-        <!-- logo -->
-        <div class="logo-container">
-            <a href="#">
-                <img src="./assets/images/rb_2506.png" alt="logo-image">
-            </a>
-        </div>
+    <header>
+        <div class="container">
+            <div class="header-container">
+                <!-- logo -->
+                <div class="logo-container">
+                    <a href="#">
+                        <img src="./assets/images/rb_2506.png" alt="logo-image">
+                    </a>
+                </div>
 
-        <!-- navbar -->
-        <nav class="nav-container text-capitalize">
-            <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">explore</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">contact us</a></li>
-            </ul>
-        </nav>
+                <!-- navbar -->
+                <nav class="nav-container text-capitalize">
+                    <ul>
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">explore</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">contact us</a></li>
+                    </ul>
+                </nav>
 
-        <!-- search button -->
-        <div class="search-container">
-            <input type="text" class="text-capitalize" placeholder="search here...">
-            <button type="button" class="text-capitalize">search</button>
+                <!-- search button -->
+                <div class="search-container">
+                    <input type="text" class="text-capitalize" placeholder="search here...">
+                    <button type="button" class="text-capitalize">search</button>
+                    <div class="toggle-wrapper">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 </body>
