Day-3 Sticky Header Responsive Table

--- a/Day-3/Sticky-Header-Responsive-Table/index.html
+++ b/Day-3/Sticky-Header-Responsive-Table/index.html
@@ -25,14 +25,14 @@
                     <tr>
                         <th class="t-title" colspan="7">NBA Player Table</th>
                     </tr>
-                    <tr class="t-heading-top">
-                        <th class="h-sticky index-color">#</th>
-                        <th class="h-sticky">Player</th>
-                        <th class="h-sticky">Seasons</th>
-                        <th class="h-sticky">Points</th>
-                        <th class="h-sticky">Jersey Number</th>
-                        <th class="h-sticky">Teams</th>
-                        <th class="h-sticky">Career</th>
+                    <tr class="t-heading-top h-sticky">
+                        <th class="index-color">#</th>
+                        <th>Player</th>
+                        <th>Seasons</th>
+                        <th>Points</th>
+                        <th>Jersey Number</th>
+                        <th>Teams</th>
+                        <th>Career</th>
                     </tr>
                 </thead>
                 <!-- table body -->
