Day-5 Responsive HTML Web Page

--- a/Day-5/Landing Page/index.html
+++ b/Day-5/Landing Page/index.html
@@ -28,7 +28,8 @@
                     </ul>
                 </nav>
                 <!-- h-icons -->
-                <div class="h-icon-wrapper d-flex">
+                <div class="d-flex">
+                    <div class="h-icon-wrapper d-flex">
                     <!-- search icon -->
                     <div class="h-svg-wrapper">
                         <a href="javascript:void(0);">
@@ -53,6 +54,14 @@
                             </svg>
                         </a>
                     </div>
+                </div>
+                <div class="toggle-menu-wrapper d-flex">
+                    <button type="button" class="toggle-button">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+</svg>
+                    </button>
+                </div>
                 </div>
             </div>
         </section>
@@ -85,18 +94,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="l-right-wrapper d-flex">
-                        <div class="light-bg d-flex">
-                            <img src="./assets/images/landing-section/home1_layer6.png" class="light-bg-img" alt="">
-                            <div class="light-wrapper d-flex">
-                                <div class="light-1">
-                                    <img src="./assets/images/landing-section/home1_layer2.png" alt="light">
-                                </div>
-                                <div class="light-2">
-                                    <img src="./assets/images/landing-section/home1_layer1.png" alt="light">
-                                </div>
+                    <div class="l-right-wrapper">
+                       <div class="light-wrapper">
+                         <div class="light-set d-flex">
+                            <div class="light-1">
+                                <img src="./assets/images/landing-section/home1_layer2.png" alt="light">
+                            </div>
+                            <div class="light-2">
+                                <img src="./assets/images/landing-section/home1_layer1.png" alt="light">
                             </div>
                         </div>
+                       </div>
                     </div>
                 </div>
             </div>
@@ -206,7 +214,7 @@
                             <span class="text-capital">see all products</span>
                         </a>
                     </div>
-                    <div class="section-border w-secondary p-y-15 d-flex">
+                    <div class="section-border w-100 w-secondary p-y-15 d-flex">
                         <span class="w-100"></span>
                     </div>
                 </div>
@@ -220,8 +228,8 @@
                     <!-- n-p-header -->
                     <div class="n-p-header w-100 d-flex">
                         <div class="n-p-title text-capital">New Design</div>
-                        <div class="n-p-nav">
-                            <ul>
+                        <div class="n-p-nav d-flex">
+                            <ul class="d-flex">
                                 <li><button type="button">all</button></li>
                                 <li><button type="button">furnitures</button></li>
                                 <li><button type="button">chairs</button></li>
@@ -453,7 +461,7 @@
                                 <img src="./assets/images/header-section/Logo.svg" alt="logo">
                             </div>
                             <p>2593 Timbercrest Road, Chisana, Alaska Badalas United State</p>
-                            <p class="p-top">(+91)7-723-4608</p>
+                            <p class="f-c-first-phone p-top">(+91)7-723-4608</p>
                             <a href="https://preview.themeforest.net/item/auros-furniture-wrap-up-woocommerce-theme/full_screen_preview/22873765?_ga=2.170172006.735182690.1735623849-520513704.1735623849">
                                 <span>Aurosfurniture@domain.vn</span>
                             </a>
@@ -469,7 +477,7 @@
 
                         </div>
                         <!-- c-3 -->
-                        <div>
+                        <div class="f-c-second d-flex">
                             <div class="f-c-s-content">
                                 <div class="c-3-list">
                                     <h2 class="text-capital custom-h2-size">Useful links</h2>
@@ -480,7 +488,7 @@
                             </div>
                         </div>
                         <!-- c-4 -->
-                        <div class="f-c-third">
+                        <div class="f-c-third d-flex">
                             <div class="f-c-third-title">
                                 <h2 class="text-capital custom-h2-size">newsletter</h2>
                             </div>
@@ -534,7 +542,7 @@
                     <!-- footer bottom -->
                     <div class="footer-bottom d-flex">
                         <div class="copyright-content d-flex">
-                            <p>Copyright &copy; 2022</p><strong class="color-black">Auros.</strong>
+                            <p>Copyright &copy; 2022</p><span class="color-black">Auros.</span>
                             <p> All rights reserved. </p>
                         </div>
                         <div>
