Day-9 Responsive FAQ Section [CSS]

--- a/Day-9/FAQ-Page/index.html
+++ b/Day-9/FAQ-Page/index.html
@@ -32,7 +32,9 @@
                     <div class="r-faq-wrap d-flex">
                         <!-- FAQs -->
                         <details class="faq-card" name="faqs" open>
+                            <!-- faq-title -->
                             <summary class="r-faq-title text-capital">What industries do you specialize in?</summary>
+                            <!-- faq-body -->
                             <div class="faq-card-body-wrap">
                                 <h4 class="r-faq-ans text-capital p-top-bottom">Answer:</h4>
                                 <p class="r-faq-body">
@@ -44,7 +46,9 @@
                         </details>
 
                         <details class="faq-card" name="faqs">
+                            <!-- faq-title -->
                             <summary class="r-faq-title text-capital">How does the consulting process work?</summary>
+                            <!-- faq-body -->
                             <div class="faq-card-body-wrap">
                                 <h4 class="r-faq-ans text-capital p-top-bottom">Answer:</h4>
                                 <p class="r-faq-body">
@@ -56,7 +60,9 @@
                         </details>
 
                         <details class="faq-card" name="faqs">
+                            <!-- faq-title -->
                             <summary class="r-faq-title text-capital">What is the typical project timeline?</summary>
+                            <!-- faq-body -->
                             <div class="faq-card-body-wrap">
                                 <h4 class="r-faq-ans text-capital p-top-bottom">Answer:</h4>
                                 <p class="r-faq-body">
