Day-5 Responsive HTML Web Page

--- a/Day-5/Landing Page/index.html
+++ b/Day-5/Landing Page/index.html
@@ -30,38 +30,38 @@
                 <!-- h-icons -->
                 <div class="d-flex">
                     <div class="h-icon-wrapper d-flex">
-                    <!-- search icon -->
-                    <div class="h-svg-wrapper">
-                        <a href="javascript:void(0);">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
-                            </svg>
-                        </a>
+                        <!-- search icon -->
+                        <div class="h-svg-wrapper">
+                            <a href="javascript:void(0);">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                                </svg>
+                            </a>
+                        </div>
+                        <!-- profile icon -->
+                        <div class="h-svg-wrapper">
+                            <a href="javascript:void(0);">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
+                                </svg>
+                            </a>
+                        </div>
+                        <!-- cart icon -->
+                        <div class="h-svg-wrapper cart-icon">
+                            <a href="javascript:void(0);">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                                    <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z" />
+                                </svg>
+                            </a>
+                        </div>
                     </div>
-                    <!-- profile icon -->
-                    <div class="h-svg-wrapper">
-                        <a href="javascript:void(0);">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
+                    <div class="toggle-menu-wrapper d-flex">
+                        <button type="button" class="toggle-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
                             </svg>
-                        </a>
+                        </button>
                     </div>
-                    <!-- cart icon -->
-                    <div class="h-svg-wrapper cart-icon">
-                        <a href="javascript:void(0);">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
-                                <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z" />
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-                <div class="toggle-menu-wrapper d-flex">
-                    <button type="button" class="toggle-button">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
-</svg>
-                    </button>
-                </div>
                 </div>
             </div>
         </section>
@@ -95,16 +95,16 @@
                         </div>
                     </div>
                     <div class="l-right-wrapper">
-                       <div class="light-wrapper">
-                         <div class="light-set d-flex">
-                            <div class="light-1">
-                                <img src="./assets/images/landing-section/home1_layer2.png" alt="light">
-                            </div>
-                            <div class="light-2">
-                                <img src="./assets/images/landing-section/home1_layer1.png" alt="light">
+                        <div class="light-wrapper">
+                            <div class="light-set d-flex">
+                                <div class="light-1">
+                                    <img src="./assets/images/landing-section/home1_layer2.png" alt="light">
+                                </div>
+                                <div class="light-2">
+                                    <img src="./assets/images/landing-section/home1_layer1.png" alt="light">
+                                </div>
                             </div>
                         </div>
-                       </div>
                     </div>
                 </div>
             </div>
@@ -545,7 +545,7 @@
                             <p>Copyright &copy; 2022</p><span class="color-black">Auros.</span>
                             <p> All rights reserved. </p>
                         </div>
-                        <div>
+                        <div class="footer-payment-img">
                             <img src="./assets/images/footer-section/paypal.png" alt="payment">
                         </div>
                     </div>
