--- a/Day-29-JS/todo.html
+++ b/Day-29-JS/todo.html
@@ -15,11 +15,10 @@
                 <div class="row d-grid">
                     <!-- form -->
                     <div class="col">
-                        <form method="post" class="d-flex" onsubmit="todoCreated()">
+                        <form method="post" class="d-flex">
                             <div class="todo-input-wrap d-flex">
                                 <input type="text" id="todo-input" placeholder="Create Todo..." autocomplete="off">
-                                <textarea name="" rows="2" id="todo-text-area" placeholder="Description..."></textarea>
-                                <button type="submit">Create</button>
+                                <button type="submit" class="btnSubmit" id="btnSubmit">Create</button>
                             </div>
                         </form>
                     </div>
