Day-29 DOM - [TODO] in Javascript

--- a/Day-29-JS/todo.html
+++ b/Day-29-JS/todo.html
@@ -17,6 +17,10 @@
                     <div class="col">
                         <form method="post" class="d-flex">
                             <div class="todo-input-wrap d-flex">
+                                <!-- date -->
+                                <div class="date-container">
+                                    <h1 class="date" id="date"></h1>
+                                </div>
                                 <input type="text" id="todo-input" placeholder="Create Todo..." autocomplete="off">
                                 <button type="submit" class="btnSubmit" id="btnSubmit">Create</button>
                             </div>
