Day-30 DOM - [FORM-Validation] in Javascript

--- a/Day-30-JS/Form-HTML/index.html
+++ b/Day-30-JS/Form-HTML/index.html
@@ -59,7 +59,7 @@
         </div>
       </header>
 
-      <!-- main content -->
+      <!-- main-content -->
       <div class="content-wrap">
         <div class="inputs-container">
           <form method="POST" autocomplete="off" id="form">
